# xbutler-sync

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: .gitignore  openapi.yaml  system-design.md
src/: main.cpp
src/cli/: cli.cpp  cli.h
src/client/: client.cpp  client.h
src/server/: server.cpp  server.h
tests/: CMakeLists.txt  smoke_test.cpp
